// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
/>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    hello world
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
/>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Pressable.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    hello world
  </div>
</div>
`;

exports[`theming Pressable.styles.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
  style="cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(239, 68, 68); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
/>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); cursor: pointer;"
  tabindex="0"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 400;"
  >
    Hello world
  </div>
</div>
`;
